dotnet_backend/api/Deployment/K8S/api-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: kallaben/spotify-api
---
apiVersion: v1
kind: Service
metadata:
  name: api-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - name: api
      protocol: TCP
      port: 80
      targetPort: 80
